tests/baselines/reference/undefinedSymbolReferencedInArrayLiteral1.errors.txt
undefinedSymbolReferencedInArrayLiteral1.ts(1,29): error TS2304: Cannot find name 'deltaOffset'.
undefinedSymbolReferencedInArrayLiteral1.ts(4,15): error TS2339: Property 'NonexistantMethod' does not exist on type 'number[]'.
undefinedSymbolReferencedInArrayLiteral1.ts(5,5): error TS2304: Cannot find name 'anotherNonExistingMethod'.


==== undefinedSymbolReferencedInArrayLiteral1.ts (3 errors) ====
    var tokens = [{ startIndex: deltaOffset }];
                                ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'deltaOffset'.
    
    var functions = [function() {
        [1, 2, 3].NonexistantMethod();
                  ~~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'NonexistantMethod' does not exist on type 'number[]'.
        anotherNonExistingMethod();
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'anotherNonExistingMethod'.
    }];
    
    